--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "8.3.x",
     "grunt": "1.0.x",
     "grunt-browser-sync": "2.2.x",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-less": "1.4.x",
     "grunt-contrib-watch": "1.0.x",
+    "grunt-csso": "^2.2.1",
+    "grunt-cwebp": "^2.1.1",
     "grunt-postcss": "0.9.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "load-grunt-tasks": "^4.0.0",
     "stylelint": "9.2.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
