--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "autoprefixer": "8.3.x",
     "grunt": "1.0.x",
     "grunt-browser-sync": "2.2.x",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-less": "1.4.x",
     "grunt-contrib-watch": "1.0.x",
     "grunt-csso": "^2.2.1",
     "grunt-cwebp": "^2.1.1",
+    "grunt-juwain-posthtml": "^0.6.0",
     "grunt-postcss": "0.9.x",
     "load-grunt-tasks": "^4.0.0",
     "stylelint": "9.2.x",
@@ -23,7 +25,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "grunt less && grunt postcss",
+    "build": "grunt build",
     "start": "npm run build && grunt serve"
   },
   "browserslist": [
