--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "grunt-cwebp": "^2.1.1",
     "grunt-juwain-posthtml": "^0.6.0",
     "grunt-postcss": "0.9.x",
+    "grunt-svgstore": "^1.0.0",
     "load-grunt-tasks": "^4.0.0",
+    "posthtml-include": "^1.1.0",
     "stylelint": "9.2.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
